@@ -1,13 +1,11 @@
-; $Id: conditional_styles.info,v 1.1 2008/09/11 03:36:43 johnalbin Exp $
-
 name = "Conditional Stylesheets"
 description = "Allows themes to add conditional stylesheets."
 
 core = 6.x
 
-; Information added by drupal.org packaging script on 2009-05-25
-version = "6.x-1.1"
+; Information added by drupal.org packaging script on 2011-04-05
+version = "6.x-1.2"
 core = "6.x"
 project = "conditional_styles"
-datestamp = "1243264907"
+datestamp = "1302004930"
 
