@@ -58,10 +58,10 @@ p.copy {
   margin:0 48px;
   }
 
-
 #header .wrap {
   min-height: 99px;
   background:#d9e3e5;
+  padding: 0 30px;
   }
 
 #footer {
