@@ -132,11 +132,11 @@ div.links a.ctools-dropdown-link:hover {
   color: #daf3d5 !important;
   }
 
-a.context-button {
+.context-links a.ctools-dropdown-link {
   color: #7caa71 !important;
   }
 
-a.context-button:hover {
+.context-links a.ctools-dropdown-link:hover {
   color: #2e4928 !important;
   }
 
