@@ -11,5 +11,6 @@ $.fn.vAlign = function() {
 
 $(document).ready(function() {
   $('#block-scholar-1').vAlign();
+  $('#block-scholar_project-1').vAlign();
   $('#scholar-shield').vAlign();
 });
